version/0.14/_sources/examples/00-basic/index.rst.txt


.. _sphx_glr_examples_00-basic:

.. _basic-gallery:

Basic DPF examples
==================
These examples explain the basic concepts of DPF.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to open a result file and do some basic postprocessing.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_00-basic_example_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_00-basic_example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Basic DPF-Core usage</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In DPF, operators provide the primary method for interacting with and extracting results. Within DPF-Core, operators are directly exposed with the Operators class as well as wrapped within several other convenience classes.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_01-basic_operators_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_01-basic_operators.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Operators overview</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In DPF, the field is the main simulation data container. During a numerical simulation, the result data is defined by values associated to entities (scoping). These entities are a subset of a model (support).">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_02-basic_field_containers_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_02-basic_field_containers.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Field and field containers overview</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="You can create your field, fields container, or meshed region to use DPF operators with your own data. The ability to use scripting to create any DPF entity means that you are not dependent on result files and can connect the DPF environment with any Python tool.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_03-create_entities_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_03-create_entities.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create your own entities using DPF operators</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Reducing the number of calls to the server is key to improving performance. Using the as_local_field option brings the data from the server to your local machine where you can work on it. When finished, you send the updated data back to the server in one transaction.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_05-use_local_data_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_05-use_local_data.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bring a field's data locally to improve performance</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The ansys.dpf.core.results.Result class, which is an instance created by the ansys.dpf.core.model.Model, gives access to helpers for requesting results on specific mesh and time scopings. With these helpers, working on a custom spatial and temporal subset of the model is straightforward.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_07-use_result_helpers_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_07-use_result_helpers.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use result helpers to load custom data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The ansys.dpf.core.results.Result class, which are instances created by the ansys.dpf.core.model.Model, give access to helpers for requesting results on specific mesh and time scopings. With these helpers, working on a temporal subset of the model is straightforward. In this example, different ways to choose the temporal subset to evaluate a result are exposed. This example can be extended to frequency subsets.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_08-results_over_time_subset_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_08-results_over_time_subset.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scope results over custom time domains</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The ansys.dpf.core.results.Result class, which are instances created by the ansys.dpf.core.model.Model, give access to helpers for requesting results on specific mesh and time scopings. With these helpers, working on a spatial subset of the model is straightforward. In this example, different ways to choose the spatial subset to evaluate a result are exposed">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_09-results_over_space_subset_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_09-results_over_space_subset.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Scope results over custom space domains</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="DPF provides operators for implementing mathematical operations, ranging from addition and multiplication to FFT and QR solving.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_10-math_operations_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_10-math_operations.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mathematical Operations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Material properties are assigned to each element in APDL and by default they are written out in the APDL result file. This example shows how you can extract material properties of each element using PyDPF-Core.">

.. only:: html

  .. image:: /examples/00-basic/images/thumb/sphx_glr_12-get_material_properties_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-basic_12-get_material_properties.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get material properties from the result file</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/00-basic/00-basic_example
   /examples/00-basic/01-basic_operators
   /examples/00-basic/02-basic_field_containers
   /examples/00-basic/03-create_entities
   /examples/00-basic/05-use_local_data
   /examples/00-basic/07-use_result_helpers
   /examples/00-basic/08-results_over_time_subset
   /examples/00-basic/09-results_over_space_subset
   /examples/00-basic/10-math_operations
   /examples/00-basic/12-get_material_properties

